--- a/index.html
+++ b/index.html
@@ -343,9 +343,7 @@
 		<p><button type="submit">Subscribe</button></p>
 		</form>
 		</div>
-		</div>s
-
-
+		</div>
 			
       </div>	  
     </section>
