--- a/index.html
+++ b/index.html
@@ -65,13 +65,15 @@
     </nav>
 
     <!-- Header -->
-    <header class="masthead" style="min-height:100%;">
+    <header class="masthead d-flex align-items-end" style="min-height:100%">
       <div class="container">
-        <div class="intro-text">
-          <div class="col-sm-6 intro-lead-in d-flex align-items-center" style="padding-left:0px">Unlock user-centric products and experiences</div>	 
-          <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#about">Learn More</a>
-        </div>
-      </div>
+	  <div class="row">
+	   <div class="intro-text">
+          <div class="col-sm-6 intro-lead-in" style="padding-left:0px">Unlock user-centric products and experiences</div>
+		  <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#about">Learn More</a>
+	    </div>	
+	  </div>
+	  </div>
     </header>
 	
 	<!-- About -->
@@ -304,19 +306,28 @@
 						<li>Send text at the end of the day for progress update</li>
 						<li>Provide weekly progress summary, with periodic motivational content and surveys to pivot overarching growth goal</li>
 					  </ul>
-					  <button class="btn btn-primary" data-dismiss="modal" type="button">
-						<i class="fa fa-times"></i>
-						Close</button>
-					  </div>
-					  <div class="col-md-6">
 					  <p style="text-align:left"><strong>Results</strong><br>
 					  After a 30 day pilot, over 70% of daily goals were accomplished and participants expressed greater control and motivation
 					  </p>
+					  </div>
+					  <div class="col-md-6">
 					  <figure>
-						<img src="img/ggdashboard.jpg" style="margin-bottom:0px" width="60%"></img>
-						  <figcaption>Personalized Progress Reports</figcaption>
+						<img src="img/testPic.jpg" width="40%" height="40%" style="margin-bottom:0px;border-color:#6f6f6f;"></img>
+						  <figcaption style="font-style:italic; font-size:smaller; color:#888888; margin-bottom:5px;">Daily text prompts and reminders</figcaption>
+					  </figure>
+					  <br>
+					  <figure>
+						<img src="img/ggdashboard.jpg" width="50%" style="margin-bottom:0px;"></img>
+						  <figcaption style="font-style:italic; font-size:smaller; color:#888888;">Personalized Progress Reports</figcaption>
 					  </figure>
 					  </div>					  
+				</div>
+				<div class="row">
+				<div class="col-sm-6" style="text-align:left">
+				<button class="btn btn-primary" data-dismiss="modal" type="button">
+				<i class="fa fa-times"></i>Close
+				</button>
+				</div>
 				</div>
               </div>
             </div>
