--- a/index.html
+++ b/index.html
@@ -312,12 +312,12 @@
 					  </div>
 					  <div class="col-md-6">
 					  <figure>
-						<img src="img/testPic.jpg" width="40%" height="40%" style="margin-bottom:0px;border-color:#6f6f6f;"></img>
+						<img src="img/sms-screenshot.png" width="40%" height="40%" style="margin-bottom:10px;border-color:#6f6f6f; box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.3);"></img>
 						  <figcaption style="font-style:italic; font-size:smaller; color:#888888; margin-bottom:5px;">Daily text prompts and reminders</figcaption>
 					  </figure>
 					  <br>
 					  <figure>
-						<img src="img/ggdashboard.jpg" width="50%" style="margin-bottom:0px;"></img>
+						<img src="img/ggdashboard.jpg" width="50%" style="margin-bottom:10px; border-color:#6f6f6f; box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.3);"></img>
 						  <figcaption style="font-style:italic; font-size:smaller; color:#888888;">Personalized Progress Reports</figcaption>
 					  </figure>
 					  </div>					  
