--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 			<div class="col-sm-6">
 			<p class="font-weight-bold">Overview</p>
 			<div style="font-style:italic">I’m a management consultant focused on Customer Experience (CX) & Digital Strategy based in New York. I work with a range of clients - from global Fortune 100 firms to local nonprofits - on creating user-centric products and services. I take a holistic approach to seamlessly integrate and address strategy, design, and technology to drive impactful, relevant, and sustainable solutions.
-			<br><br>Industry experience includes: retail, hospitality, telecom, international public sector, education, media, finacial services	
+			<br><br>Industry experience includes: retail, hospitality, telecom, international public sector, education, media, financial services	
 			</div>
 			</div>
 			<div class="col-sm-6" id="PrimaryDivision">
