--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class="container">
 	  <div class="row">
 	   <div class="intro-text">
-          <div class="col-sm-6 intro-lead-in" style="padding-left:0px">Unlock user-centric products and experiences</div>
+          <div class="col-sm-6 intro-lead-in" style="padding-left:0px">Create user-centric products and experiences</div>
 		  <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#about">Learn More</a>
 	    </div>	
 	  </div>
@@ -233,7 +233,7 @@
 		  <div class="col-lg-12 text-center">
 		  <ul class="list-inline social-buttons">
               <li class = "list-inline-item">
-				<a href="mailto:ibrahimiayub@gmail.com">
+				<a href="mailto:hello@ibrahimayub.com">
 				<i class="fa fa-envelope"></i>
                 </a>
               </li>
